Add initial content

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,23 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Welcome to FOSS.Recipes
 
-## What is Nextra?
+Free, Open, Straightforward and Simple Recipes for Everyone!
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Tired of scrolling through countless ads and walls of text just to find a simple recipe? So were we. That's why FOSS.Recipes was born - a clutter-free, ad-free, and no-nonsense platform where you can find, share, and enjoy your favorite recipes with ease.
 
-## Documentation
+# Our Mission
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+As a software developer who loves to cook, our founder was fed up with recipe websites that prioritize ad revenue over user experience. FOSS.Recipes is our solution - a community-driven platform where food lovers can access and share their favorite recipes without any distractions or hidden agendas.
+
+What You'll Find on FOSS.Recipes
+
+1. Free and Open Recipes: Our recipe collection is accessible to everyone, free of charge.
+
+2. Recipe First, Fluff Later: Our recipes are at the top of the page, so you don't have to scroll through a wall of text just to find what you're looking for.
+
+3. Community Contributions: FOSS.Recipes is built on the principles of open-source collaboration. We encourage users to contribute their recipes, make improvements, and give feedback, so that we can continue to grow and improve our platform.
+
+4. Easy-to-Follow Instructions: Our recipes are designed with simplicity in mind. Each one comes with a clear and concise list of ingredients, step-by-step instructions, and relevant notes or tips to ensure your cooking experience is as enjoyable as possible.
+
+## Join Our Community Today!
+
+Have a recipe you'd like to share? Want to contribute to our growing collection of recipes? [Fork Us](https://github.com/chand1012/foss.recipes/fork) on GitHub and submit a pull request! We're always looking for new recipes, so don't be shy - we'd love to hear from you!
