Add initial recipes

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,10 @@
-# Welcome to FOSS.Recipes
+# Welcome
 
 Free, Open, Straightforward and Simple Recipes for Everyone!
 
 Tired of scrolling through countless ads and walls of text just to find a simple recipe? So were we. That's why FOSS.Recipes was born - a clutter-free, ad-free, and no-nonsense platform where you can find, share, and enjoy your favorite recipes with ease.
 
-# Our Mission
+## Our Mission
 
 As a software developer who loves to cook, our founder was fed up with recipe websites that prioritize ad revenue over user experience. FOSS.Recipes is our solution - a community-driven platform where food lovers can access and share their favorite recipes without any distractions or hidden agendas.
 
