Add link to original recipe

--- a/pages/entrees/gouda_mac.mdx
+++ b/pages/entrees/gouda_mac.mdx
@@ -3,7 +3,7 @@ import { Steps } from "nextra-theme-docs";
 
 # Gouda Mac and Cheese
 
-Smoky take on my favorite comfort food. Inspired by Adam Ragusa's recipe, using the same food science principles to create a creamy, smoky, and cheesy sauce.
+Smoky take on my favorite comfort food. Inspired by [Adam Ragusa's recipe](https://youtu.be/tSfHVTx1WMk), using the same food science principles to create a creamy, smoky, and cheesy sauce.
 
 They key is the Sodium Citrate found in the processed American cheese. It's a salt that acts as an emulsifier, allowing the cheese to melt smoothly and evenly into the sauce. It also helps the cheese to stay smooth and creamy as it cools.
 
