--- a/pages/cocktails/cosmo.mdx
+++ b/pages/cocktails/cosmo.mdx
@@ -1,9 +1,11 @@
 import DrinkIngredientsTable from "../../components/DrinkIngredientsTable";
 import { Steps } from "nextra-theme-docs";
 
-# Cosmo
+# Alex's Cosmo
 
 This is a deliciously sweet and fruity drink with a delightful pink color that can sneak up on you.
+
+This is not the traditional Cosmopolitan recipe, but it is a great variation.
 
 <DrinkIngredientsTable
   baseUnit={"parts"}
@@ -33,7 +35,7 @@ This is a deliciously sweet and fruity drink with a delightful pink color that c
 
 ### Fill serving glasses with ice and citrus peel.
 
-Peel about 5 inches of any citrus peel and place twist on top of ice. The peel adds a nice aroma to the drink.
+Peel about 5 inches of any citrus fruit and place twist on top of ice. The peel adds a nice aroma to the drink.
 
 ### Combine other ingredients in a shaker with ice.
 
