--- a/pages/cocktails/cosmo.mdx
+++ b/pages/cocktails/cosmo.mdx
@@ -7,6 +7,8 @@ This is a deliciously sweet and fruity drink with a delightful pink color that c
 
 This is not the traditional Cosmopolitan recipe, but it is a great variation.
 
+Makes 2 servings.
+
 <DrinkIngredientsTable
   baseUnit={"parts"}
   excludedUnits={["cups"]}
