Fix truffle page

--- a/pages/desserts/oreo_truffles.mdx
+++ b/pages/desserts/oreo_truffles.mdx
@@ -3,11 +3,27 @@ import { Steps } from "nextra-theme-docs";
 
 # Oreo Truffles
 
-<FoodIngredientsTable baseUnit="imperial" ingredients={[
-  {name:"Oreos", quantity: 1, unit: "Family Size Pack", notes: "Do not use double stuffed. Regular Oreos are best."},
-  {name:"Cream Cheese", quantity: 16, unit: "oz"},
-  {name: "Chocolate", quantity: 1, unit: "lbs", notes: "I use Merckens chocolate wafers. You can use any melting chocolate you like."}
-]}>
+Decadent, rich, and delicious. These are a crowd favorite.
+
+<FoodIngredientsTable
+  baseUnit="imperial"
+  ingredients={[
+    {
+      name: "Oreos",
+      quantity: 1,
+      unit: "Family Size Pack",
+      notes: "Do not use double stuffed. Regular Oreos are best.",
+    },
+    { name: "Cream Cheese", quantity: 16, unit: "oz" },
+    {
+      name: "Chocolate",
+      quantity: 1,
+      unit: "lbs",
+      notes:
+        "I use Merckens chocolate wafers. You can use any melting chocolate you like.",
+    },
+  ]}
+/>
 
 ## Steps
 
