Migrate from Nextra v2 (Pages Router) to Nextra v4 (App Router)
- Upgrade next to v15, nextra and nextra-theme-docs to v4, react to v19
- Move pages/ to content/ (App Router content directory convention)
- Create app/layout.tsx with Layout, Navbar, Footer from nextra-theme-docs
- Create app/[[...mdxPath]]/page.tsx for dynamic MDX routing
- Create mdx-components.tsx (required by nextra v4)
- Convert _meta.json to _meta.ts with export default
- Update component imports: Tabs/Tab from nextra-theme-docs → Tabs/Tabs.Tab from nextra/components
- Update Steps/Callout imports from nextra-theme-docs → nextra/components
- Replace nx- prefixed CSS classes with standard Tailwind classes
- Add 'use client' directive to DrinkIngredientsTable and FoodIngredientsTable
- Update next.config.mjs to nextra v4 format (no theme/themeConfig)
- Remove remark-mdx-disable-explicit-jsx dependency (not needed in v4)
- Delete theme.config.tsx (theme now configured via Layout props)
- Update tsconfig.json for App Router (moduleResolution: bundler)

--- a/content/appetizers/buffalo_chicken_dip.mdx
+++ b/content/appetizers/buffalo_chicken_dip.mdx
@@ -1,5 +1,5 @@
 import FoodIngredientsTable from "../../components/FoodIngredientsTable";
-import { Steps, Callout } from "nextra-theme-docs";
+import { Steps, Callout } from "nextra/components";
 
 # Buffalo Chicken Dip
 
