--- a/content/cocktails/amaretto_sour.mdx
+++ b/content/cocktails/amaretto_sour.mdx
@@ -1,22 +1,21 @@
 import DrinkIngredientsTable from "../../components/DrinkIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
-# 🥃 Peach Bourbon Sour
+# 🥃 Amaretto Sour
 
-My take on a classic. A bit strong for some, but whiskey and bourbon lovers will enjoy.
+Refreshing, easy to drink cocktail. Perfect for a hot summer day.
 
 <DrinkIngredientsTable
   baseUnit={"parts"}
   excludedUnits={["cups"]}
   ingredients={[
     {
-      name: "Bourbon",
+      name: "Amaretto Liquer",
       quantity: 2,
-      notes: "Makers Mark and Knob Creek are good options.",
     },
     { name: "Lemon Juice", quantity: 1 },
     {
-      name: "Peach Syrup",
+      name: "Fruity Syrup",
       quantity: 1,
       notes: "Rose's Peach Syrup is a good store bought option.",
     },
@@ -33,7 +32,7 @@ My take on a classic. A bit strong for some, but whiskey and bourbon lovers will
 
 <Steps>
 
-### Combine bourbon, lemon juice, and peach syrup in a shaker with ice.
+### Combine amaretto, lemon juice, and peach syrup in a shaker with ice.
 
 ### Shake well.
 
