--- a/content/cocktails/peach_bourbon_sour.mdx
+++ b/content/cocktails/peach_bourbon_sour.mdx
@@ -1,21 +1,22 @@
 import DrinkIngredientsTable from "../../components/DrinkIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
-# 🥃 Amaretto Sour
+# 🥃 Peach Bourbon Sour
 
-Refreshing, easy to drink cocktail. Perfect for a hot summer day.
+My take on a classic. A bit strong for some, but whiskey and bourbon lovers will enjoy.
 
 <DrinkIngredientsTable
   baseUnit={"parts"}
   excludedUnits={["cups"]}
   ingredients={[
     {
-      name: "Amaretto Liquer",
+      name: "Bourbon",
       quantity: 2,
+      notes: "Makers Mark and Knob Creek are good options.",
     },
     { name: "Lemon Juice", quantity: 1 },
     {
-      name: "Fruity Syrup",
+      name: "Peach Syrup",
       quantity: 1,
       notes: "Rose's Peach Syrup is a good store bought option.",
     },
@@ -32,7 +33,7 @@ Refreshing, easy to drink cocktail. Perfect for a hot summer day.
 
 <Steps>
 
-### Combine amaretto, lemon juice, and peach syrup in a shaker with ice.
+### Combine bourbon, lemon juice, and peach syrup in a shaker with ice.
 
 ### Shake well.
 
