--- a/content/cocktails/rum_punch.mdx
+++ b/content/cocktails/rum_punch.mdx
@@ -1,5 +1,5 @@
 import DrinkIngredientsTable from "../../components/DrinkIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
 # 🍹 Rum Punch
 
