--- a/content/entrees/corn_flaked_chicken.mdx
+++ b/content/entrees/corn_flaked_chicken.mdx
@@ -1,5 +1,5 @@
 import FoodIngredentsTable from '../../components/FoodIngredientsTable'
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
 # 🍗 Corn Flake Chicken
 
