--- a/content/cocktails/blue_lagoon.mdx
+++ b/content/cocktails/blue_lagoon.mdx
@@ -1,21 +1,19 @@
 import DrinkIngredientsTable from "../../components/DrinkIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
-# 🌴 Blue Hawaii
+# 🐟 Blue Lagoon
 
-Tropical and refreshing, this drink is perfect for a hot summer day.
+Tropical and refreshing, this drink is perfect for a hot day by the lake.
 
 <DrinkIngredientsTable
   baseUnit="oz"
   excludedUnits={["cups"]}
   ingredients={[
-    { name: "Vodka", quantity: 0.75 },
-    { name: "Blue Curacao", quantity: 0.5 },
-    { name: "White Rum", quantity: 0.75 },
-    { name: "Pineapple Juice", quantity: 3 },
-    { name: "Sweet & Sour Mix", quantity: 1 },
+    { name: "Vodka", quantity: 1 },
+    { name: "Blue Curacao", quantity: 1 },
+    { name: "Lemonade", quantity: 4 },
     {
-      name: "Pineapple",
+      name: "Orange",
       quantity: 1,
       unit: "slice",
       notes: "Garnish. Optional.",
