--- a/content/cocktails/sex_on_the_beach.mdx
+++ b/content/cocktails/sex_on_the_beach.mdx
@@ -1,5 +1,5 @@
 import DrinkIngredientsTable from "../../components/DrinkIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
 # 👙 Sex on the Beach
 
