--- a/content/desserts/oreo_truffles.mdx
+++ b/content/desserts/oreo_truffles.mdx
@@ -1,5 +1,5 @@
 import FoodIngredientsTable from "../../components/FoodIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
 # Oreo Truffles
 
