--- a/content/entrees/gouda_mac_&_cheese.mdx
+++ b/content/entrees/gouda_mac_&_cheese.mdx
@@ -1,5 +1,5 @@
 import FoodIngredientsTable from "../../components/FoodIngredientsTable";
-import { Steps } from "nextra-theme-docs";
+import { Steps } from "nextra/components";
 
 # Gouda Mac and Cheese
 
