add frozen pepper/onion medley tip to kielbasa recipe

--- a/content/entrees/kielbasa_pierogies_sheet_pan.mdx
+++ b/content/entrees/kielbasa_pierogies_sheet_pan.mdx
@@ -56,3 +56,4 @@ Top with dried parsley. Serve with sour cream on the side.
 - Feeds 4 with no leftovers. For a larger family, use a full sheet pan for pierogies and a second for the kielbasa and veggies.
 - You can slice the kielbasa and veggies ahead of time to cut down on prep.
 - Use whatever seasonings or sausage your family likes — this is very forgiving.
+- Short on time? Skip the fresh peppers and onion — half a bag of frozen pepper and onion medley works just as well.
