generalize peanut butter whiskey, note Screwball and Bird Dog

--- a/content/cocktails/willy_wonkas_retreat.mdx
+++ b/content/cocktails/willy_wonkas_retreat.mdx
@@ -16,8 +16,9 @@ A rich, stirred cocktail that tastes like a grown-up peanut butter cup. Chocolat
       notes: "Use your favorite. Knob Creek Single Barrel Reserve is a great choice.",
     },
     {
-      name: "Screwball Peanut Butter Whiskey",
+      name: "Peanut Butter Whiskey",
       quantity: 1,
+      notes: "Screwball is the original recommendation. Bird Dog is also excellent.",
     },
     {
       name: "Crème de Cacao",
