fix: use correct unit names for metric conversion
Component expects cups/lbs/tbsp/tsp, not cup/lb/oz

--- a/content/entrees/steak_cheese_and_rice.mdx
+++ b/content/entrees/steak_cheese_and_rice.mdx
@@ -10,17 +10,17 @@ A Mexican-restaurant inspired skillet dinner — seasoned rice topped with seare
 <FoodIngredentsTable 
   baseUnit="imperial"
   ingredients={[
-    { name: "Long grain white rice", quantity: 1, unit: "cup" },
+    { name: "Long grain white rice", quantity: 1, unit: "cups" },
     { name: "Olive oil", quantity: 2, unit: "tbsp" },
     { name: "Small onion, chopped", quantity: 1, unit: "whole" },
     { name: "Garlic, minced", quantity: 1, unit: "tbsp" },
-    { name: "Chicken broth", quantity: 2, unit: "cup" },
-    { name: "Tomato sauce", quantity: 8, unit: "oz" },
+    { name: "Chicken broth", quantity: 2, unit: "cups" },
+    { name: "Tomato sauce", quantity: 1, unit: "cups" },
     { name: "Salt", quantity: 0.5, unit: "tsp" },
     { name: "Black pepper", quantity: 0.5, unit: "tsp" },
     { name: "Cumin", quantity: 1, unit: "tsp" },
     { name: "Dried cilantro", quantity: 1, unit: "tsp" },
-    { name: "Sirloin steak, sliced thin", quantity: 1, unit: "lb" },
+    { name: "Sirloin steak, sliced thin", quantity: 1, unit: "lbs" },
     { name: "Butter", quantity: 2, unit: "tbsp" },
     { name: "Montreal steak seasoning", quantity: 1, unit: "whole", notes: "To taste." },
     { name: "White queso (e.g. Pancho's)", quantity: 1, unit: "whole", notes: "To taste." },
